--- a/wp-content/themes/sc-starter-theme/src/blocks/image-text/template.twig
+++ b/wp-content/themes/sc-starter-theme/src/blocks/image-text/template.twig
@@ -1,15 +1,19 @@
 {% extends "section.twig" %}
 
 {% block section_content %}
-  <div>
+<div class="flex flex-col gap-8 items-center md:flex-row">
+  <div class="basis-1/2">
     {% include "image/template.twig" with {
       image: image,
+      width: 680,
       allowed_sizes: ['md', 'lg']
     } %}
   </div>
-  <div>
-    <p>{{ text }}</p>
-    <h2>{{ heading }}</h2>
-    <p>{{ subtext }}</p>
+  <div class="flex basis-1/2 flex-col gap-6">
+    <p class="text-lg">{{ text }}</p>
+    <h2 class="text-6xl">{{ heading }}</h2>
+    <p class="text-lg">{{ subtext }}</p>
   </div>
+</div>
+
 {% endblock %}
