fix: structure of the hero block

--- a/wp-content/themes/sc-starter-theme/src/blocks/hero/template.twig
+++ b/wp-content/themes/sc-starter-theme/src/blocks/hero/template.twig
@@ -1,5 +1,8 @@
 {% extends "section.twig" %}
 
 {% block section_content %}
-  <div class="">Hello {{ heading }}</div>
+  <div>
+    <h1>{{ heading }}<span>_</span></h1>
+    <p>{{ subheading }}</p>
+  </div>
 {% endblock %}
