feat: add styles to hero block

--- a/wp-content/themes/sc-starter-theme/src/blocks/hero/template.twig
+++ b/wp-content/themes/sc-starter-theme/src/blocks/hero/template.twig
@@ -1,8 +1,6 @@
-{% extends "section.twig" %}
-
-{% block section_content %}
-  <div>
-    <h1>{{ heading }}<span>_</span></h1>
-    <p>{{ subheading }}</p>
-  </div>
-{% endblock %}
+  <section class="bg-eee-thunderstorm-blue-100/75 bg-hero-image">
+    <div class="section-container container pt-36 pb-28 flex flex-col gap-3">
+      <h1 class="text-8xl text-white leading-[100px]">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
+      <p class="text-3xl text-white">{{ subheading }}</p>
+    </div>
+  </section>
