--- a/wp-content/themes/sc-starter-theme/templates/components/site-header/template.twig
+++ b/wp-content/themes/sc-starter-theme/templates/components/site-header/template.twig
@@ -1,16 +1,33 @@
 {% set nav_items = nav_items ? nav_items : site_header_primary.get_items %}
 
-<header class="container flex items-center justify-between py-8">
-	<h1>
-		<a href="{{ homepage_url }}">{{ site.title }}</a>
-	</h1>
-	<nav class="hidden gap-none xl:gap-6 lg:flex">
-		<ul>
-			{% for item in nav_items %}
-				<li>
-					<a class="text-purple-300" href="{{ item.url }}">{{ item.title }}</a>
-				</li>
-			{% endfor %}
-		</ul>
-	</nav>
+<header id="site-header" class="py-8 border-b border-eee-neutral-100 fixed min-w-full">
+  <div class="container flex items-center justify-between ">
+    <a href="{{ homepage_url }}">
+      <img class="logo-white" src="{{ logo_white }}" width="89" />
+      <img class="logo-black hidden" src="{{ logo_black }}" width="89" />
+    </a>
+    <nav>
+      <ul class="flex gap-12">
+        {% for item in nav_items %}
+          <li class="font-bold text-sm">
+            <a class="text-eee-neutral-100" href="{{ item.url }}">{{ item.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </nav>
+    <div class="side-menu flex gap-12 text-eee-neutral-100 stroke-eee-neutral-100">
+      <div class="flex gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418" />
+        </svg>
+        <p>UA</p>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+        </svg>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+      </svg>
+    </div>
+  </div>
 </header>
