--- a/wp-content/themes/sc-starter-theme/templates/components/site-footer/template.twig
+++ b/wp-content/themes/sc-starter-theme/templates/components/site-footer/template.twig
@@ -1,5 +1,55 @@
-<footer class="container py-8">
-	<p>{{ copyright_text  }}</p>
+{% set nav_items = nav_items ? nav_items : site_header_primary.get_items %}
+
+<footer class="bg-eee-neutral-800">
+  <div class="container flex items-center justify-between py-12">
+    <a href="{{ homepage_url }}">
+        <img class="logo-white" src="{{ logo_white }}" width="89" />
+        <img class="logo-black hidden" src="{{ logo_black }}" width="89" />
+    </a>
+    <ul class="flex items-center gap-3 text-eee-neutral-100 uppercase text-sm">
+      <li>Follow us</li>
+      <li>
+        <a href="#">{% include 'icons/facebook.twig' %}</a>
+      </li>
+       <li>
+        <a href="#">{% include 'icons/linkedin.twig' %}</a>
+      </li>
+    </ul>
+    <nav>
+      <ul class="flex gap-12">
+        {% for item in nav_items %}
+          <li class="font-bold text-sm">
+            <a class="text-eee-neutral-100" href="{{ item.url }}">{{ item.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </nav>
+  </div>
+  <div class="py-6 border-t-[1px] border-t-eee-neutral-100 text-eee-neutral-100 stroke-eee-lime-100 fill-eee-lime-100">
+    <ul class="container flex justify-end gap-3">
+      <li>
+        <a href="#" class="flex gap-2">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="inherited" class="size-6">
+            <path d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z" />
+            <path d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z" />
+          </svg>
+          <span>info@egis-ertle.com</span>
+        </a>
+      </li>
+      <li class="flex gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="inherited" class="size-6">
+          <path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5Z" clip-rule="evenodd" />
+        </svg>
+        <span>+38 050-380-96-20</span>
+      </li>
+      <li class="flex gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="inherited" class="size-6">
+          <path fill-rule="evenodd" d="m11.54 22.351.07.04.028.016a.76.76 0 0 0 .723 0l.028-.015.071-.041a16.975 16.975 0 0 0 1.144-.742 19.58 19.58 0 0 0 2.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 0 0-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 0 0 2.682 2.282 16.975 16.975 0 0 0 1.145.742ZM12 13.5a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" clip-rule="evenodd" />
+        </svg>
+        <span>вул. Антоновича, 29, м. Київ, Україна 01033</span>
+      </li>
+    </ul>
+  </div>
 </footer>
 
 {% if wp_footer_exists %}
