--- a/wp-content/themes/sc-starter-theme/assets/styles/global/_typo.css
+++ b/wp-content/themes/sc-starter-theme/assets/styles/global/_typo.css
@@ -5,35 +5,35 @@
 
 	h1,
 	.h1 {
-		@apply font-syne text-4xl font-semibold;
+		@apply text-4xl font-semibold;
 	}
 
 	h2,
 	.h2 {
-		@apply font-syne text-3xl font-semibold;
+		@apply text-3xl font-semibold;
 	}
 
 	h3,
 	.h3 {
-		@apply font-syne text-2xl font-semibold;
+		@apply text-2xl font-semibold;
 	}
 
 	h4,
 	.h4 {
-		@apply font-syne text-xl font-semibold;
+		@apply text-xl font-semibold;
 	}
 
 	h5,
 	.h5 {
-		@apply font-syne text-lg;
+		@apply text-lg;
 	}
 
-	h6,
+	/* h6,
 	.h6 {
-		@apply font-syne;
-	}
+		
+	} */
 
 	p {
-		@apply font-jost text-lg;
+		@apply font-ebgaramond text-lg;
 	}
 }
