feat: add slider block

--- a/wp-content/themes/sc-starter-theme/assets/styles/main.css
+++ b/wp-content/themes/sc-starter-theme/assets/styles/main.css
@@ -12,6 +12,7 @@
 
 /** Import files */
 @import "./global/_typo.css";
+@import "./components/_slider.css";
 
 /** Import Tailwind CSS Config */
 /* stylelint-disable-next-line at-rule-no-unknown */
