fix: z-index to header component

--- a/wp-content/themes/sc-starter-theme/templates/components/site-header/template.twig
+++ b/wp-content/themes/sc-starter-theme/templates/components/site-header/template.twig
@@ -1,6 +1,6 @@
 {% set nav_items = nav_items ? nav_items : site_header_primary.get_items %}
 
-<header id="site-header" class="py-8 border-b border-eee-neutral-100 fixed min-w-full">
+<header id="site-header" class="z-[99999] py-8 border-b border-eee-neutral-100 fixed min-w-full">
   <div class="container flex items-center justify-between ">
     <a href="{{ homepage_url }}">
       <img class="logo-white" src="{{ logo_white }}" width="89" />
