--- a/wp-content/themes/sc-starter-theme/src/blocks/eee-heading/template.twig
+++ b/wp-content/themes/sc-starter-theme/src/blocks/eee-heading/template.twig
@@ -1,5 +1,3 @@
-{% extends "section.twig" %}
-
-{% block section_content %}
-    <h1 class="text-8xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
-{% endblock %}
+<div class="container pt-20">
+  <h1 class="text-8xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
+</div>
