--- a/wp-content/themes/sc-starter-theme/src/blocks/expertise/template.twig
+++ b/wp-content/themes/sc-starter-theme/src/blocks/expertise/template.twig
@@ -1,4 +1,4 @@
-<section class="container pb-16">
+<section class="container py-16">
   <div class="grid grid-cols-1 md:grid-cols-4 gap-5">
     {% for item in items %}
         <div class="flex justify-center items-center h-[297px] bg-no-repeat bg-cover bg-blend-overlay bg-eee-neutral-900/40" style="background-image: url({{ item.image.url }})">
