--- a/wp-content/themes/sc-starter-theme/assets/styles/global/_typo.css
+++ b/wp-content/themes/sc-starter-theme/assets/styles/global/_typo.css
@@ -33,7 +33,18 @@
 		
 	} */
 
-	p {
-		@apply font-ebgaramond text-lg;
-	}
+  main {
+    ul {
+      @apply list-disc font-ebgaramond text-lg pl-4;
+    }
+
+    p {
+		  @apply font-ebgaramond text-lg pb-4;
+	  }
+
+    strong {
+      @apply font-bold text-xl; 
+      /* change for CodecPro */
+    }
+  }
 }
