feat: add pagination component to the news page

--- a/wp-content/themes/sc-starter-theme/templates/home.twig
+++ b/wp-content/themes/sc-starter-theme/templates/home.twig
@@ -21,6 +21,9 @@
             </a>
           </div>
       </article>
-      {% endfor %}
-  </div>
+    {% endfor %}
+    <div class="flex justify-end py-14">
+      {% include 'pagination/template.twig' %}
+    </div>
+  </div>  
 {% endblock %}
