--- a/wp-content/themes/sc-starter-theme/templates/components/button/template.twig
+++ b/wp-content/themes/sc-starter-theme/templates/components/button/template.twig
@@ -7,5 +7,13 @@
 } %}
 
 <a {{ id ? 'id="' ~ id ~ '"' }} href="{{ url }}" target="{{ target }}" {{ target == '_blank' ? 'rel="noopener"' }} class="border font-medium py-2 px-4 md:px-7 block max-w-fit {{ attrType[type] }} {{ classes }}" {{ attrs }}>
-	{{ title }}
+	<div class="flex gap-2">
+    {% if icon %}
+      {% include "icons/arrow.twig" with {
+        classes: "size-6",
+        } 
+      %} 
+    {% endif %}
+    {{ title }} 
+  </div>
 </a>
