--- a/wp-content/themes/sc-starter-theme/assets/styles/fonts.css
+++ b/wp-content/themes/sc-starter-theme/assets/styles/fonts.css
@@ -7,4 +7,13 @@
 		src: url(/wp-content/themes/sc-starter-theme/dist/fonts/ebgaramond.woff2)
 			format("woff2");
 	}
+
+@font-face {
+		font-family: Urbanist;
+		font-style: normal;
+		font-weight: 400 600 700 800;
+		font-display: swap;
+		src: url(/wp-content/themes/sc-starter-theme/dist/fonts/urbanist.woff2)
+			format("woff2");
+	}
 }
