--- a/wp-content/themes/sc-starter-theme/templates/parts/head.twig
+++ b/wp-content/themes/sc-starter-theme/templates/parts/head.twig
@@ -8,6 +8,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="{{ get_static_asset('assets/images/favicons/favicon-16x16.png') }}">
 	<link href="{{ get_static_asset('assets/images/favicons/favicon.ico') }}" rel="shortcut icon" type="image/x-icon"/>
 	<link rel="preload" href="{{ get_static_asset('dist/fonts/ebgaramond.woff2') }}" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="{{ get_static_asset('dist/fonts/urbanist.woff2') }}" as="font" type="font/woff2" crossorigin="anonymous">
 	{{ function('wp_head') }}
 {% else %}
 	{{ head }}
