--- a/wp-content/themes/eee-theme/templates/home.twig
+++ b/wp-content/themes/eee-theme/templates/home.twig
@@ -6,6 +6,7 @@
         <article class="flex gap-8 py-10 border-b border-eee-blue-green-rules-100">
           <div class="min-w-[330px]">
             {% include "image/template.twig" with {
+              image_classes: 'max-w-[330px] object-cover',
               image: function('acf_get_attachment', function('get_post_thumbnail_id', post.ID)),
               width: 330,
               allowed_sizes: ['md', 'lg']
