--- a/wp-content/themes/eee-theme/templates/single-project.twig
+++ b/wp-content/themes/eee-theme/templates/single-project.twig
@@ -28,11 +28,18 @@
         } 
       %}
       </div>
-       <div class="flex">
-      <div class="border-l border-eee-blue-green-rules-100 max-w-prose">
-        <div class="flex flex-col gap-4">{{ post.content }}</div>
+      <div class="flex">
+        <div class="border-l border-eee-blue-green-rules-100 max-w-prose">
+          <div class="flex flex-col gap-4">
+            {{ post.content }}
+            {% include 'button/template.twig' with {
+              url: '/контакти',
+              classes: "bg-eee-lime-100 rounded-full px-2.5 py-3",
+              title: "Дізнатись більше",
+          }%}
+          </div>
+        </div>
       </div>
-    </div>
     </div>
     
   </section>
