--- a/wp-content/themes/eee-theme/templates/single-project.twig
+++ b/wp-content/themes/eee-theme/templates/single-project.twig
@@ -1,6 +1,13 @@
 {% extends 'base.twig' %}
 
 {% block content %}
+  {% set bgImageUrl = function('acf_get_attachment', function('get_post_thumbnail_id', post.ID)).url %}
+  {% set safeBgImage = bg_safelist_generator(bgImageUrl) %}
+  {% include 'hero/template.twig' with {
+    heading: post.title,
+    subheading: function('get_field', 'project_subheading_field', post.ID),
+    bg_image: "bg-[url('" ~ bgImageUrl ~ "')]"
+  } %}
   <section class="container pt-10 pb-20">
     <div class="flex flex-col gap-4 pb-10">
       {# Back Button #}
@@ -17,7 +24,6 @@
         <p><span class="text-eee-green-100">•</span> {{ get_reading_time() }}</p>
       </div>
     </div>
-
     <div class="grid grid-cols-2">
       {# Image #}
       <div class="w-[600px]">
