--- a/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
@@ -3,24 +3,24 @@
 {% block section_content %}
   <div>
   {# Contacts #}
-    <div class="flex gap-4 border-b border-eee-blue-green-rules-100 pb-10 mb-10">
+    <div class="flex gap-4 pb-10 mb-10 border-b border-eee-blue-green-rules-100">
       <div class="w-1/3">
         <h1 class="text-6xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
         <div class="pt-7">
           <div class="flex flex-col gap-1">
-            <p class="font-bold pb-0">{{__("Адреса", "eee-theme")}}</p>
+            <p class="pb-0 font-bold">{{ function('pll__', "Адреса") }}</p>
             <p>{{ contacts.address }}</p>
           </div>
           <div class="flex flex-col gap-1">
-            <p class="font-bold pb-0">{{__("Телефон", "eee-theme")}}</p>
+            <p class="pb-0 font-bold">{{ function('pll__', "Телефон") }}</p>
             <p>{{ contacts.phone }}</p>
           </div>
           <div class="flex flex-col gap-1">
-            <p class="font-bold pb-0">{{__("Пошта", "eee-theme")}}</p>
+            <p class="pb-0 font-bold">{{ function('pll__', "Пошта") }}</p>
             <p>{{ contacts.email }}</p>
           </div>
           {# Social media #}
-          <ul class="flex gap-2 list-none p-0">
+          <ul class="flex gap-2 p-0 list-none">
             {% if social_media.facebook %}
               <li>
                 <a href="{{ social_media.facebook }}" target="_blank">
@@ -41,17 +41,34 @@
         </div>
       </div>
       {# Map #}
-      <div class="bg-orange-400 w-2/3 h-[500px]"></div>
+      <div class="w-2/3 h-[500px]">
+        <iframe
+          class="w-full"
+          height="500"
+          style="border:0"
+          loading="lazy"
+          allowfullscreen
+          referrerpolicy="no-referrer-when-downgrade"
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCoVFuEov11Ne4aUBw-RLA0BKxk1Inr7QM
+            &q=Antonovycha%20St%2C%2029%2C%20Kyiv%2C%20Ucrania%2C%2002000
+">
+</iframe>
+
+      </div>
     </div>
   {# Form #}
     <div class="flex gap-4">
-     <div class="flex flex-col gap-2 w-1/2">
-      <h3 class="text-3xl">Відправте нам повідомлення</h3>
-      <p>*Обовязкові поля</p>
+     <div class="flex flex-col w-1/2 gap-2">
+      <h3 class="text-3xl">{{ function('pll__', "Відправте нам повідомлення") }}</h3>
+      <p>{{ function('pll__', "*Обовязкові поля") }}</p>
      </div>
       <div class="w-1/2">
         {% apply shortcodes %}
-          [contact-form-7 id="91e77ba"]
+          {% if (function('pll_current_language')) == 'en' %}
+            [contact-form-7 id="425dab6"]
+          {% else %}
+            [contact-form-7 id="91e77ba"]
+          {% endif %}
         {% endapply %}
       </div>
     </div>
