--- a/wp-content/themes/eee-theme/templates/single-project.twig
+++ b/wp-content/themes/eee-theme/templates/single-project.twig
@@ -13,7 +13,7 @@
       {% include "button/template.twig" with {
           url: '/project',
           classes: "border border-eee-neutral-900 rounded-full px-2.5 py-3",
-          title: "Назад",
+          title: function('pll__', "Назад"),
           icon: true,
         }
       %}
@@ -40,7 +40,7 @@
             {% include 'button/template.twig' with {
               url: '/контакти',
               classes: "bg-eee-lime-100 rounded-full px-2.5 py-3",
-              title: "Дізнатись більше",
+              title: function('pll__', "Дізнатись більше")
           }%}
           </div>
         </div>
