--- a/wp-content/themes/eee-theme/assets/styles/fonts.css
+++ b/wp-content/themes/eee-theme/assets/styles/fonts.css
@@ -2,7 +2,7 @@
 	@font-face {
 		font-family: EBGaramond;
 		font-style: normal;
-		font-weight: 400;
+		font-weight: 400 700;
 		font-display: swap;
 		src: url(/wp-content/themes/eee-theme/dist/fonts/ebgaramond.woff2)
 			format("woff2");
