--- a/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
@@ -60,7 +60,7 @@
     <div class="flex gap-4">
      <div class="flex flex-col w-1/2 gap-2">
       <h3 class="text-3xl">{{ function('pll__', "Відправте нам повідомлення") }}</h3>
-      <p>{{ function('pll__', "*Обовязкові поля") }}</p>
+      <p>{{ function('pll__', "*Обов'язкові поля") }}</p>
      </div>
       <div class="w-1/2">
         {% apply shortcodes %}
