--- a/wp-content/themes/eee-theme/templates/archive-expertise.twig
+++ b/wp-content/themes/eee-theme/templates/archive-expertise.twig
@@ -8,7 +8,7 @@
       <a href="{{ function('get_permalink', item.ID) }}">
         {% set bg_image = function('acf_get_attachment', function('get_post_thumbnail_id', item.ID)).url %}
         <div class="flex justify-center items-center h-[297px] bg-no-repeat bg-cover bg-blend-overlay bg-eee-neutral-900/40" style="background-image: url({{ bg_image }})">
-          <p class="px-4 text-center text-eee-neutral-100">{{ item.title }}</p>
+          <p class="px-4 text-xl text-center text-eee-neutral-100">{{ item.title }}</p>
         </div>
       </a>
     {% endfor %}
