--- a/wp-content/themes/eee-theme/templates/single-project.twig
+++ b/wp-content/themes/eee-theme/templates/single-project.twig
@@ -1,12 +1,14 @@
 {% extends 'base.twig' %}
 
 {% block content %}
+<main>
   {% set bgImageUrl = function('acf_get_attachment', function('get_post_thumbnail_id', post.ID)).url %}
   {% include 'components/project-hero/template.twig' with {
     heading: post.title,
     image_url: bgImageUrl,
     subheading: function('get_field', 'project_subheading_field', post.ID),
   } %}
+  
   <section class="container pt-10 pb-20">
     <div class="flex flex-col gap-4 pb-10">
       {# Back Button #}
@@ -17,7 +19,7 @@
           icon: true,
         }
       %}
-      <h2>{{ post.title }}</h2>
+      <h2 class="text-5xl">{{ post.title }}</h2>
       <div class="flex gap-1">
         <p>{{ post.date }}</p>
         <p><span class="text-eee-green-100">•</span> {{ get_reading_time() }}</p>
@@ -45,7 +47,8 @@
           </div>
         </div>
       </div>
-    </div>
-    
+    </div> 
   </section>
+</main>
+  
 {% endblock %}
