fix: mobile version

--- a/wp-content/themes/eee-theme/src/blocks/hero/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/hero/template.twig
@@ -1,8 +1,8 @@
-<section id="hero-block" class="bg-hero-image h-[520px] bg-cover bg-no-repeat bg-eee-thunderstorm-blue-100/75 ">
-  <div class="container flex flex-col gap-3 section-container pt-36 pb-28">
-    <h1 class="text-8xl text-white leading-[100px]">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
+<section id="hero-block" class="bg-hero-image lg:h-[520px] bg-cover bg-no-repeat bg-eee-thunderstorm-blue-100/75 ">
+  <div class="container flex flex-col gap-3 pb-8 section-container pt-36 lg:pb-28">
+    <h1 class="text-3xl md:text-5xl lg:text-8xl text-white lg:leading-[100px]">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
     {% if subheading %}
-      <p class="text-3xl text-white">{{ subheading }}</p>
+      <p class="text-lg text-white md:text-xl lg:text-3xl">{{ subheading }}</p>
     {% endif %}
   </div>
 </section>
