--- a/wp-content/themes/eee-theme/templates/components/search-form/template.twig
+++ b/wp-content/themes/eee-theme/templates/components/search-form/template.twig
@@ -2,9 +2,9 @@
   <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[80%] mx-auto h-fit">
     <div class="flex">
       <form action="/" method="get" >
-        <input class="appearance-none bg-transparent w-full text-8xl text-eee-neutral-100 focus:outline-none" type="text" name="s" placeholder="Search here">
+        <input class="w-full text-4xl bg-transparent appearance-none lg:text-8xl text-eee-neutral-100 focus:outline-none" type="text" name="s" placeholder="Search here">
       </form>
-      <svg id="search-close" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-28">
+      <svg id="search-close" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-14 lg:size-28">
         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
       </svg>
     </div>
