--- a/wp-content/themes/eee-theme/src/blocks/certifications/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/certifications/template.twig
@@ -1,15 +1,15 @@
 <section class="border-t border-eee-blue-green-rules-100">
-  <div class="container flex gap-6">
-    <div class="md:basis-1/4 pt-10 pb-40">
+  <div class="container flex flex-col lg:flex-row lg:gap-6">
+    <div class="pt-10 pb-8 lg:pb-40 md:basis-1/4">
       <h2 class="text-xl">{{ heading }}</h2>
     </div>
 
-    <div class="md:basis-3/4 grid grid-cols-3 gap-12">
+    <div class="grid lg:gap-12 lg:grid-cols-3 md:basis-3/4">
         {% for item in items %}
           <div class="border-l border-eee-blue-green-rules-100">
-            <div class="flex flex-col gap-4 py-10">
+            <div class="flex flex-col gap-2 py-2 lg:py-10">
               <h3>{{ item.subheading }}</h3>
-              <p>{{ item.text }}</p>
+              {{ item.text }}
             </div>
           </div>
         {% endfor %}
