--- a/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/contacts/template.twig
@@ -3,8 +3,8 @@
 {% block section_content %}
   <div>
   {# Contacts #}
-    <div class="flex gap-4 pb-10 mb-10 border-b border-eee-blue-green-rules-100">
-      <div class="w-1/3">
+    <div class="flex flex-col gap-4 pb-10 mb-10 border-b lg:flex-row border-eee-blue-green-rules-100">
+      <div class="w-full lg:w-1/3">
         <h1 class="text-6xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
         <div class="pt-7">
           <div class="flex flex-col gap-1">
@@ -41,7 +41,7 @@
         </div>
       </div>
       {# Map #}
-      <div class="w-2/3 h-[500px]">
+      <div class="w-full lg:w-2/3 h-[500px]">
         <iframe
           class="w-full"
           height="500"
@@ -57,12 +57,12 @@
       </div>
     </div>
   {# Form #}
-    <div class="flex gap-4">
-     <div class="flex flex-col w-1/2 gap-2">
+    <div class="flex flex-col gap-4 lg:flex-row">
+     <div class="flex flex-col w-full gap-2 lg:w-1/2">
       <h3 class="text-3xl">{{ function('pll__', "Відправте нам повідомлення") }}</h3>
       <p>{{ function('pll__', "*Обов'язкові поля") }}</p>
      </div>
-      <div class="w-1/2">
+      <div class="w-full lg:w-1/2">
         {% apply shortcodes %}
           {% if (function('pll_current_language')) == 'en' %}
             [contact-form-7 id="425dab6"]
