--- a/wp-content/themes/eee-theme/src/blocks/description/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/description/template.twig
@@ -1,6 +1,6 @@
 <section class="border-b border-eee-blue-green-rules-100">
   <div class="container flex flex-col gap-2 md:flex-row">
-    <h2 class="md:basis-1/4 text-xl py-10">{{ heading }}</h2>
-    <p class="md:basis-3/4 border-l border-eee-blue-green-rules-100 py-10">{{ text }}</p>
+    <h2 class="py-10 text-xl md:basis-1/4">{{ heading }}</h2>
+    <p class="border-l md:basis-3/4 border-eee-blue-green-rules-100 lg:py-10">{{ text }}</p>
   </div>
 </section>
