--- a/wp-content/themes/eee-theme/src/blocks/eee-heading/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/eee-heading/template.twig
@@ -1,3 +1,3 @@
 <div class="container pt-20">
-  <h1 class="text-8xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
+  <h1 class="text-3xl md:text-5xl lg:text-8xl">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
 </div>
