--- a/wp-content/themes/eee-theme/src/blocks/service/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/service/template.twig
@@ -1,8 +1,8 @@
-<section class="py-10 md:py-20 {{ background_color ? 'bg-default-eee-neutral-800 text-eee-neutral-100' : 'bg-eee-neutral-100' }}">
+<section class="py-4 md:py-10 lg:py-20 {{ background_color ? 'bg-default-eee-neutral-800 text-eee-neutral-100' : 'bg-eee-neutral-100' }}">
     <div class="container">
-      <h2>{{ heading }}</h2>
-      <div class="flex gap-8 py-10">
-        <div class="{{ image_position ? 'order-last' : 'order-first' }}">
+      <h2 class="text-xl md:text-3xl lg:text-4xl">{{ heading }}</h2>
+      <div class="flex flex-col py-4 lg:py-10 lg:flex-row lg:gap-8">
+        <div class="pb-4 {{ image_position ? 'order-last' : 'order-first' }}">
           {% include "image/template.twig" with {
             image: image,
             width: 680,
