--- a/wp-content/themes/eee-theme/src/blocks/shareholders/template.twig
+++ b/wp-content/themes/eee-theme/src/blocks/shareholders/template.twig
@@ -1,7 +1,7 @@
 <div class="bg-eee-neutral-800">
-  <div class="container flex gap-80 text-eee-neutral-100 py-10">
-    <h2 class="md:basis-1/4 text-xl">{{ heading }}</h2>
-    <div class="flex flex-col md:basis-3/4 gap-10">
+  <div class="container flex flex-col py-10 lg:flex-row lg:gap-80 text-eee-neutral-100">
+    <h2 class="pb-8 text-xl md:basis-1/4">{{ heading }}</h2>
+    <div class="flex flex-col gap-10 md:basis-3/4">
       {% for item in items %}
         <div class="flex flex-col gap-4">
           <div class="flex items-center gap-4">
