--- a/wp-content/themes/eee-theme/templates/components/project-hero/template.twig
+++ b/wp-content/themes/eee-theme/templates/components/project-hero/template.twig
@@ -1,8 +1,8 @@
-<section class="relative h-[520px] overflow-hidden">
+<section class="relative lg:h-[520px] overflow-hidden">
   <img src="{{ image_url }}" alt="{{ heading }}" class="absolute inset-0 object-cover w-full h-full">
   <div class="absolute inset-0 bg-eee-thunderstorm-blue-100/75"></div>
-  <div class="container relative z-10 flex flex-col gap-3 section-container pt-36 pb-28">
-    <h1 class="text-8xl text-white leading-[100px]">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
+  <div class="container relative z-10 flex flex-col gap-3 section-container lg:pt-36 pt-28 pb-28">
+    <h1 class="text-3xl md:text-5xl lg:text-8xl text-white lg:leading-[100px]">{{ heading }}<span class="text-eee-lime-100">_</span></h1>
     {% if subheading %}
       <p class="text-3xl text-white">{{ subheading }}</p>
     {% endif %}
