fix: link to mail in footer

--- a/wp-content/themes/eee-theme/templates/components/site-footer/template.twig
+++ b/wp-content/themes/eee-theme/templates/components/site-footer/template.twig
@@ -39,7 +39,7 @@
   <div class="py-6 border-t-[1px] border-t-eee-neutral-100 text-eee-neutral-100 stroke-eee-lime-100 fill-eee-lime-100">
     <ul class="container flex flex-col justify-end gap-3 lg:flex-row">
       <li>
-        <a href="#" class="flex gap-2">
+        <a href="mailto:{{ contacts.email }}" class="flex gap-2">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="inherited" class="size-6">
             <path d="M1.5 8.67v8.58a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3V8.67l-8.928 5.493a3 3 0 0 1-3.144 0L1.5 8.67Z" />
             <path d="M22.5 6.908V6.75a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3v.158l9.714 5.978a1.5 1.5 0 0 0 1.572 0L22.5 6.908Z" />
