--- a/wp-content/themes/eee-theme/templates/single-project.twig
+++ b/wp-content/themes/eee-theme/templates/single-project.twig
@@ -25,9 +25,9 @@
         <p class="pb-0"><span class="text-eee-green-100">•</span> {{ get_reading_time() }}</p>
       </div>
     </div>
-    <div class="grid lg:grid-cols-2">
+    <div class="grid gap-4 lg:grid-cols-2">
       {# Image #}
-      <div class="lg:w-[600px]">
+      <div class="lg:max-w-[600px]">
         {% include "image/template.twig" with {
           image: function('acf_get_attachment', function('get_post_thumbnail_id', post.ID)),
           width: 600,
